--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -28,105 +28,96 @@
               <ul class="type-list">
                 <li class="type-item"
                   [ngClass]="{'selected': typeSelected === 'mst'}"
-                  [style.height]="mstCollapse.isExpanded ? infoHeight : '100px'">
+                >
                   <div class="type-item__box">
                     <div class="type-item__box--top">
                       <input
                         type="radio"
                         id="mst-radio"
                         value="MST"
+                        (change)="updateTypeSelected('MST')"
                         formControlName="reasonTypeRadio"
                       />
                       <label
                         for="mst-radio"
                         class="type-text"
-                        (click)="updateTypeSelected('MST')"
                       >
                         Miscellaneous Report to FEC (MST)
                       </label>
-                      <div
-                        class="type-radio"
-                        data-value="MST"
-                        (click)="updateTypeSelected('MST')"
-                      ></div>
                       <div class="type__info">
                         <button
                           type="button"
                           class="btn btn-link"
-                          aria-controls="mst_collapse"
-                          (click)="(mstCollapse.isExpanded)? mstCollapse.hide(): mstCollapse.show()"
+                          [ngbTooltip]="mstContent"
+                          #mstTooltip="ngbTooltip"
+                          (click)="toggleToolTip(mstTooltip)"                          
+                          triggers="manual"
+                          tooltipClass="info-tooltip"
+                          placement="{{ tooltipPosition }}"
                         >
                           <i class="info-icon" aria-hidden="true"></i>
                           <span class="sr-only">
                             Click for more information
                           </span>
                         </button>
-                      </div>
-                    </div>
-                    <div class="type-item__box--botom">
-                      <div id="mst_collapse" #mstCollapse="bs-collapse" class="collapse-text" [collapse]="!isOpen">
-                        <div class="well well-lg">
-                          A Miscellaneous Text Submission (Form 99) may be used for narrative responses that do not affect actual entries within a report (for example, when outlining the committee’s procedures for making “best efforts” to obtain contributor information.)
-                        </div>
+                        <ng-template #mstContent>
+                          A Miscellaneous Text Submission (Form 99) may be used for narrative responses that do not affect actual entries within a report (for example, when outlining the committee’s procedures for making “best efforts” to obtain contributor information.)           
+                        </ng-template>                          
                       </div>
                     </div>
                   </div>
                 </li>
                 <li class="type-item" 
                   [ngClass]="{'selected': typeSelected === 'msm'}"
-                  [style.height]="msmCollapse.isExpanded ? infoHeight : '100px'">
+                >
                   <div class="type-item__box">
                     <div class="type-item__box--top">
                       <input
                         type="radio"
                         id="msm-radio"
                         value="MSM"
+                        (change)="updateTypeSelected('MSM')"
                         formControlName="reasonTypeRadio"
                       />
                       <label
                         for="msm-radio"
                         class="type-text"
-                        (click)="updateTypeSelected('MSM')"
                       >
                         Filing Frequency Chance Notice (MSM)
                       </label>
-                      <div
-                        class="type-radio"
-                        data-value="msm"
-                        (click)="updateTypeSelected('MSM')"
-                      ></div>
                       <div class="type__info">
                         <button
                           type="button"
                           class="btn btn-link"
-                          aria-controls="msm_collapse"
-                          (click)="(msmCollapse.isExpanded)? msmCollapse.hide(): msmCollapse.show()"
+                          [ngbTooltip]="msmContent"
+                          #msmTooltip="ngbTooltip"
+                          (click)="toggleToolTip(msmTooltip)"                          
+                          triggers="manual"
+                          tooltipClass="info-tooltip"
+                          placement="{{ tooltipPosition }}"
                         >
                           <i class="info-icon" aria-hidden="true"></i>
                           <span class="sr-only">
                             Click for more information
                           </span>
                         </button>
-                      </div>
-                    </div>
-                    <div class="type-item__box--botom">
-                      <div id="msm_collapse" #msmCollapse="bs-collapse" class="collapse-text" [collapse]="!isOpen">
-                        <div class="well well-lg">
-                          Notification to the FEC in writing where committees may change their filing schedule from quarterly to monthly (or vice versa) only once per calendar year.
-                        </div>
+                        <ng-template #msmContent>
+                          Notification to the FEC in writing where committees may change their filing schedule from quarterly to monthly (or vice versa) only once per calendar year.          
+                        </ng-template>                          
                       </div>
                     </div>
                   </div>
                 </li>
                 <li class="type-item"
                   [ngClass]="typeSelected === 'msi'? 'selected' : ''"
-                  [style.height]="msiCollapse.isExpanded ? infoHeight : '100px'">
+                >
                   <div class="type-item__box">
                     <div class="type-item__box--top">
                       <input
                         type="radio"
                         id="msi-radio"
                         value="MSI"
+                        (change)="updateTypeSelected('MSI')"
                         formControlName="reasonTypeRadio"
                       />
                       <label
@@ -136,37 +127,31 @@
                       >
                         Disavowal Response (MSI)
                       </label>
-                      <div
-                        class="type-radio"
-                        data-value="MSI"
-                        (click)="updateTypeSelected('MSI')"
-                      ></div>
                       <div class="type__info">
                         <button
                           type="button"
                           class="btn btn-link"
-                          aria-controls="msi_collapse"
-                          (click)="(msiCollapse.isExpanded)? msiCollapse.hide(): msiCollapse.show()"
+                          [ngbTooltip]="msiContent"
+                          #msiTooltip="ngbTooltip"
+                          (click)="toggleToolTip(msiTooltip)"                          
+                          triggers="manual"
+                          tooltipClass="info-tooltip"
+                          placement="{{ tooltipPosition }}"
                         >
                           <i class="info-icon" aria-hidden="true"></i>
                           <span class="sr-only">
                             Click for more information
                           </span>
                         </button>
-                      </div>
-                    </div>
-                    <div class="type-item__box--botom">
-                      <div id="msi_collapse" #msiCollapse="bs-collapse" class="collapse-text" [collapse]="!isOpen">
-                        <div class="well well-lg">
-                          A letter to the FEC where a candidate disavows unauthorized campaign activity within 30 days after being notified by the agency that another person or group has received contributions or made expenditures of more than $5,000 on the individual’s behalf. 100.3(a)(3) and 102.13(a)(2).
-                        </div>
+                        <ng-template #msiContent>
+                          A letter to the FEC where a candidate disavows unauthorized campaign activity within 30 days after being notified by the agency that another person or group has received contributions or made expenditures of more than $5,000 on the individual’s behalf. 100.3(a)(3) and 102.13(a)(2).          
+                        </ng-template>                         
                       </div>
                     </div>
                   </div>
                 </li>
                 <li class="type-item"  
                   [ngClass]="typeSelected === 'msw'? 'selected' : ''"
-                  [style.height]="mswCollapse.isExpanded ? infoHeight : '100px'"
                 >
                   <div class="type-item__box">
                     <div class="type-item__box--top">
@@ -179,35 +164,29 @@
                       <label
                         for="msw-radio"
                         class="type-text"
-                        (click)="updateTypeSelected('MSW')"
                       >
                         C1 Loan Agreement (MSW)
                       </label>
-                      <div
-                        class="type-radio"
-                        data-value="MSW"
-                        (click)="updateTypeSelected('MSW')"
-                      >
-                      </div>
                       <div class="type__info">
                         <button
                           type="button"
                           class="btn btn-link"
                           aria-controls="msw_collapse"
-                          (click)="(mswCollapse.isExpanded)? mswCollapse.hide(): mswCollapse.show()"
+                          [ngbTooltip]="mswContent"
+                          #mswTooltip="ngbTooltip"
+                          (click)="toggleToolTip(mswTooltip)"                          
+                          triggers="manual"
+                          tooltipClass="info-tooltip"
+                          placement="{{ tooltipPosition }}"
                         >
                           <i class="info-icon" aria-hidden="true"></i>
                           <span class="sr-only">
                             Click for more information
                           </span>
                         </button>
-                      </div>
-                    </div>
-                    <div class="type-item__box--botom">
-                      <div id="msw_collapse" #mswCollapse="bs-collapse" class="collapse-text" [collapse]="!isOpen">
-                        <div class="well well-lg">
-                          Loans and Line of Credit from Lending Institutions, including copies of loan agreements.
-                        </div>
+                        <ng-template #mswContent>
+                          Loans and Line of Credit from Lending Institutions, including copies of loan agreements.          
+                        </ng-template>                      
                       </div>
                     </div>
                   </div>
