--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -115,10 +115,11 @@
         margin-right: auto;
         margin-top: 20px;
         z-index: 0;
+        height: 250px !important;
         textarea {
           border-radius: 3px;
           font-size: 1em;
-          height: 400px;
+          height: 200px !important; /* Mahendra 11262018 */
           overflow: scroll;
           padding: 10px;
           width: 90%;
