--- a/front-end/src/app/reports/reports.component.html
+++ b/front-end/src/app/reports/reports.component.html
@@ -5,26 +5,26 @@
 					<h1 class="text-center">Reports</h1>
 					<table class="table-striped" style="width:100%">
 					<thead>
-						<tr align="left">
-							<th>Form</th>
-							<th>Status</th>
-							<th>FEC ID</th>
-							<th>Coverage Start Date</th>
-							<th>Coverage End Date</th>
-							<th>Report</th>
-							<th>Filed Date</th>
-							<th>Actions</th>
+						<tr text-align="left">
+							<th text-align="left">Form</th>
+							<th text-align="left">Status</th>
+							<th text-align="right">FEC ID</th>
+							<th text-align="left">Coverage Start Date</th>
+							<th text-align="left">Coverage End Date</th>
+							<th text-align="left">Report</th>
+							<th text-align="left">Filed Date</th>
+							<th text-align="left">Actions</th>
 						</tr>
 					</thead>	
 					<tbody>
 						<tr *ngFor="let report of reports || async">
-							<td>{{report.form_type}}</td>
-							<td>{{report.is_submitted ? 'submitted' :'save'}}</td>
-							<td>{{report.id}}</td>
-							<td>{{report.coverage_start_date | date: 'MM/dd/yyyy'}}</td>
-							<td>{{report.coverage_end_date | date: 'MM/dd/yyyy'}}</td>
-							<td>{{report.ReportType}}</td>
-							<td>{{report.created_at | date: 'MM/dd/yyyy'}}</td>
+							<td text-align="left">{{report.form_type}}</td>
+							<td text-align="left">{{report.is_submitted ? 'Submitted' :'Save'}}</td>
+							<td text-align="right" >{{report.is_submitted ? report.id : ''}}</td>
+							<td text-align="left">{{report.coverage_start_date | date: 'MM/dd/yyyy'}}</td>
+							<td text-align="left">{{report.coverage_end_date | date: 'MM/dd/yyyy'}}</td>
+							<td text-align="left">{{report.ReportType}}</td>
+							<td text-align="left">{{report.created_at | date: 'MM/dd/yyyy'}}</td>
 							<td></td>
 						</tr>
 					</tbody>
